--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,9 @@
 cmake_minimum_required(VERSION 3.21)
-get_filename_component(ProjectId ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-string(REPLACE " " "_" ProjectId ${ProjectId})
-project(${ProjectId})
+project(SlowboostAll)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_compile_definitions(${ProjectId} CG_DEBUG)
+add_compile_definitions(SlowboostAll CG_DEBUG msse2)
 
 add_subdirectory(lib)
 add_subdirectory(Slowboost)
