--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,10 +5,13 @@ project(cg_test_suite)
 add_subdirectory(googletest)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
+file(GLOB_RECURSE sources CONFIGURE_DEPENDS "*.cpp")
+file(GLOB_RECURSE includes CONFIGURE_DEPENDS "*.hpp")
+
 # 'cg_test_suite' is the target name 'test1.cpp tests2.cpp' are source files
 # with tests
-add_executable(cg_test_suite test_main.cpp softmax_test.cpp)
-target_link_libraries(cg_test_suite gtest gtest_main Slowboost)
+add_executable(cg_test_suite ${sources} ${includes} helpers.hpp glorot_test.cpp)
+target_link_libraries(cg_test_suite PRIVATE Slowboost gtest gtest_main)
 target_include_directories(
-        cg_test_suite PRIVATE ../cg/include ../cg/src /usr/local/Cellar
-        /usr/local/include)
+  cg_test_suite PRIVATE ../Slowboost/include ../Slowboost/src /usr/local/Cellar
+                        /usr/local/include)
