Closing in on backprop

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/macos,clion+all,c++,cmake
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,clion+all,c++,cmake
 
-
+Xcode
 
 ### C++ ###
 # Prerequisites
