--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,5 +1,6 @@
-# 'tests' is the subproject name
-project(cg_lib)
 
 # 'GoogleTest' is the folder with Google Test sources
-add_subdirectory(EigenRand)
+add_subdirectory(xtl)
+add_subdirectory(xtensor)
+add_subdirectory(xtensor-blas)
+add_subdirectory(spdlog)
