--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,15 @@
 [submodule "tests/googletest"]
 	path = tests/googletest
 	url = https://github.com/google/googletest.git
-[submodule "lib/EigenRand"]
-	path = lib/EigenRand
-	url = https://github.com/bab2min/EigenRand.git
+[submodule "lib/xtensor-blas"]
+	path = lib/xtensor-blas
+	url = https://github.com/xtensor-stack/xtensor-blas.git
+[submodule "lib/xtensor"]
+	path = lib/xtensor
+	url = https://github.com/xtensor-stack/xtensor.git
+[submodule "lib/xtl"]
+	path = lib/xtl
+	url = https://github.com/xtensor-stack/xtl.git
+[submodule "lib/spdlog"]
+	path = lib/spdlog
+	url = https://github.com/edvn0/spdlog.git
