--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,4 @@ add_compile_definitions(SlowboostAll CG_DEBUG msse2)
 add_subdirectory(lib)
 add_subdirectory(Slowboost)
 add_subdirectory(SlowboostDemo)
-add_subdirectory(tests)
+add_subdirectory(SlowboostTests)
