--- a/Slowboost/CMakeLists.txt
+++ b/Slowboost/CMakeLists.txt
@@ -9,9 +9,11 @@ find_package(LAPACK REQUIRED)
 file(GLOB_RECURSE sources CONFIGURE_DEPENDS "*.cpp")
 file(GLOB_RECURSE includes CONFIGURE_DEPENDS "*.hpp")
 
-message(STATUS "${sources}")
-
 add_library(Slowboost ${sources} ${includes})
-target_link_libraries(Slowboost PRIVATE xtensor xtensor-blas xtl ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES} spdlog)
-target_compile_definitions(Slowboost PUBLIC CG_DEBUG)
-target_include_directories(Slowboost PUBLIC include ../lib/xtensor-blas/include ../lib/xtl/include ../lib/xtensor/include ../lib/spdlog/include)
+target_link_libraries(
+  Slowboost PRIVATE xtensor xtensor-blas xtl ${BLAS_LIBRARIES}
+                    ${LAPACK_LIBRARIES} spdlog)
+target_compile_definitions(Slowboost PUBLIC SLOWBOOST_DEBUG)
+target_include_directories(
+  Slowboost PUBLIC include ../lib/xtensor-blas/include ../lib/xtl/include
+                   ../lib/xtensor/include ../lib/spdlog/include)
