--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "tests/googletest"]
-	path = tests/googletest
+	path = SlowboostTests/googletest
 	url = https://github.com/google/googletest.git
 [submodule "lib/xtensor-blas"]
 	path = lib/xtensor-blas
